
* several changes of proof tools;

* HOL: new version of inductive and datatype;

* HOL: major changes to the inductive and datatype packages;

* HOL: renamed r^-1 to 'converse' from 'inverse'; `inj_onto' is now
called `inj_on';

* HOL: removed duplicate thms in Arith:
  less_imp_add_less  should be replaced by  trans_less_add1
  le_imp_add_le      should be replaced by  trans_le_add1

* Pure: ML function 'theory_of' replaced by 'theory';


*** Proof tools ***

* Simplifier: Asm_full_simp_tac is now more aggressive.
  1. It will sometimes reorient premises if that increases their power to
     simplify.
  2. It does no longer proceed strictly from left to right but may also
     rotate premises to achieve further simplification.
  For compatibility reasons there is now Asm_lr_simp_tac which is like the
  old Asm_full_simp_tac in that it does not rotate premises.

* Classical reasoner: wrapper mechanism for the classical reasoner now
allows for selected deletion of wrappers, by introduction of names for
wrapper functionals.  This implies that addbefore, addSbefore,
addaltern, and addSaltern now take a pair (name, tactic) as argument,
and that adding two tactics with the same name overwrites the first
one (emitting a warning).
  type wrapper = (int -> tactic) -> (int -> tactic)
  setWrapper, setSWrapper, compWrapper and compSWrapper are replaced by
  addWrapper, addSWrapper: claset * (string * wrapper) -> claset
  delWrapper, delSWrapper: claset *  string            -> claset
  getWrapper is renamed to appWrappers, getSWrapper to appSWrappers;

* HOL/split_all_tac is now much faster and fails if there is nothing
to split.  Existing (fragile) proofs may require adaption because the
order and the names of the automatically generated variables have
changed.  split_all_tac has moved within claset() from unsafe wrappers
to safe wrappers, which means that !!-bound variables are split much
more aggressively, and safe_tac and clarify_tac now split such